[package]
name = "lithium-cache"
version = "1.0.0"
edition = "2024"
authors = ["TheByteSlayer"]
description = "A high-performance, lightweight Caching System using the Lithium API Service."
repository = "https://github.com/thebyteslayer/lithium-cache"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "lithium-cache-service"
path = "src/service.rs"
